crates/uv-resolver/src/snapshots/uv_resolver__lock__tests__missing_dependency_source_ambiguous.snap
---
source: crates/uv-resolver/src/lock.rs
expression: result
---
Err(
    Error {
        inner: Error {
            inner: TomlError {
                message: "dependency a has no `source` and no default `source` is defined field but has more than one matching distribution",
                raw: None,
                keys: [],
                span: None,
            },
        },
    },
)
