crates/uv-resolver/src/snapshots/uv_resolver__lock__tests__missing_dependency_version_unambiguous.snap
---
source: crates/uv-resolver/src/lock.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        fork_markers: [],
        requires_python: None,
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            exclude_newer: None,
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "a",
                    ),
                    version: "0.1.0",
                    source: Registry(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Hash(
                                    HashDigest {
                                        algorithm: Sha256,
                                        digest: "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                    },
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dev_dependencies: {},
                requires_dist: [],
                requires_dev: {},
            },
            Package {
                id: PackageId {
                    name: PackageName(
                        "b",
                    ),
                    version: "0.1.0",
                    source: Registry(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                },
                sdist: Some(
                    Url {
                        url: UrlString(
                            "https://example.com",
                        ),
                        metadata: SourceDistMetadata {
                            hash: Some(
                                Hash(
                                    HashDigest {
                                        algorithm: Sha256,
                                        digest: "37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3",
                                    },
                                ),
                            ),
                            size: Some(
                                0,
                            ),
                        },
                    },
                ),
                wheels: [],
                fork_markers: [],
                dependencies: [
                    Dependency {
                        package_id: PackageId {
                            name: PackageName(
                                "a",
                            ),
                            version: "0.1.0",
                            source: Registry(
                                UrlString(
                                    "https://pypi.org/simple",
                                ),
                            ),
                        },
                        extra: {},
                        marker: true,
                    },
                ],
                optional_dependencies: {},
                dev_dependencies: {},
                requires_dist: [],
                requires_dev: {},
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "a",
                ),
                version: "0.1.0",
                source: Registry(
                    UrlString(
                        "https://pypi.org/simple",
                    ),
                ),
            }: 0,
            PackageId {
                name: PackageName(
                    "b",
                ),
                version: "0.1.0",
                source: Registry(
                    UrlString(
                        "https://pypi.org/simple",
                    ),
                ),
            }: 1,
        },
        manifest: ResolverManifest {
            members: [],
            constraints: [],
            overrides: [],
        },
    },
)
