crates/uv-resolver/src/snapshots/uv_resolver__lock__tests__source_direct_has_subdir.snap
---
source: crates/uv-resolver/src/lock.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        fork_markers: [],
        requires_python: None,
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            exclude_newer: None,
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "anyio",
                    ),
                    version: "4.3.0",
                    source: Direct(
                        UrlString(
                            "https://burntsushi.net",
                        ),
                        DirectSource {
                            subdirectory: Some(
                                "wat/foo/bar",
                            ),
                        },
                    ),
                },
                sdist: None,
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dev_dependencies: {},
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "anyio",
                ),
                version: "4.3.0",
                source: Direct(
                    UrlString(
                        "https://burntsushi.net",
                    ),
                    DirectSource {
                        subdirectory: Some(
                            "wat/foo/bar",
                        ),
                    },
                ),
            }: 0,
        },
    },
)
